--- a/src/main/webapp/angular/preta-admin/views/expense/show.html
+++ b/src/main/webapp/angular/preta-admin/views/expense/show.html
@@ -88,7 +88,7 @@
 	
 	<div layout="row" layout-wrap>
 		<div>
-			<md-button class="md-raised" x-ui-sref="root.payments" x-ui-sref-options="{ reload: true}">
+			<md-button class="md-raised" x-ui-sref="root.expenses" x-ui-sref-options="{ reload: true}">
 				<i class="fa fa-arrow-circle-left"></i><span class="hidden-xs">&nbsp;Retour à la liste</span>
 			</md-button>
 		</div>
