Updated MySQL and DB Username / Password

--- a/src/main/webapp/angular/preta-manager/theme/components/pageTop/pageTop.html
+++ b/src/main/webapp/angular/preta-manager/theme/components/pageTop/pageTop.html
@@ -9,8 +9,8 @@
       </a>
       <ul  class="top-dropdown-menu profile-dropdown" uib-dropdown-menu>
         <li><a x-ui-sref="root.profile" ><i class="fa fa-user"></i>Profil</a></li>
-        <li><a href x-ng-click="home()" ><i class="fa fa-home"></i>Accueil</a></li>
-        <li><a href x-ng-click="logout()" class="signout"><i class="fa fa-power-off"></i>Deconnexion</a></li>
+        <li><a style="cursor:pointer;" x-ng-click="home()" ><i class="fa fa-home"></i>Accueil</a></li>
+        <li><a style="cursor:pointer;" x-ng-click="logout()" class="signout"><i class="fa fa-power-off"></i>Deconnexion</a></li>
       </ul>
     </div>
     <msg-center></msg-center>
